[package]
name = "ch8disasm"
authors = ["dreary_dugong"]
version = "0.1.0"
edition = "2021"
description = "A CLI utility to disassemble chip8 roms to human-readable assembly"
about = "A CLI utility to disassemble chip8 roms to human-readable assembly"
repository = "https://github.com/dreary-dugong/chip8_disassembler_rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
